[build] Adds missing resources for examples to EXTRA_DIST target

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -44,4 +44,7 @@ gaussian_blur_SOURCES = gaussian-blur.c
 
 endif
 
-EXTRA_DIST =
+EXTRA_DIST = \
+	hello-world.cl \
+	gaussian-blur.cl \
+	colorful.jpg
